--- a/src/app/modules/admin/components/product-view/product-view.component.html
+++ b/src/app/modules/admin/components/product-view/product-view.component.html
@@ -1,4 +1,4 @@
-<div style=" height: 100%;" id="container">
+<div  id="container">
   <div class="container-fluid mt-3">
     <div>
       <a routerLink="../" style="color: black;"><fa-icon [icon]="faArrowLeft" size="2x"
