--- a/src/app/modules/admin/components/products/products.component.scss
+++ b/src/app/modules/admin/components/products/products.component.scss
@@ -12,7 +12,7 @@ table {
 
   .mat-header-cell {
     background-color: #7474e3;
-    //  background-color:var(--link-color);
+     background-color:var(--product-listbg);
     color:var(--toast-text);
   }
  
