--- a/src/app/product-sku-detail/product-sku-detail.component.scss
+++ b/src/app/product-sku-detail/product-sku-detail.component.scss
@@ -10,7 +10,8 @@
    width:1200px ;
    height: auto;
    border-radius: 20px;
-   
+     background-color:var(--toast-background);
+     color:var(--toast-text);
 
 }
 
