--- a/src/app/modules/admin/components/order-history-page/order-history-page.component.scss
+++ b/src/app/modules/admin/components/order-history-page/order-history-page.component.scss
@@ -17,7 +17,8 @@
 .custom-table th {
 padding: 10px;
   border-right: 1px solid black;
-
+  background-color:var(--toast-background);
+  color:var(--toast-text);
 
 
   
@@ -41,6 +42,8 @@ font-family:initial ;
  #table{
   height: 450px;
   overflow-y: auto;
+  background-color:var(--toast-background);
+  color:var(--toast-text);
  }
 
 .custom-table th{
@@ -58,6 +61,9 @@ h1{
   color: rgb(62, 8, 199);
   font-weight: bold;
   font-family: initial;
+  background-color:var(--toast-background);
+  color:var(--toast-text);
+  
 }
 p{
     font-size: 20px;
@@ -66,13 +72,19 @@ p{
     font-family: initial;
 }
 #crossbtn{
-  margin-left: 1000px;
-  margin-top: -50px;
+  margin-left: 970px;
+  margin-top: -15px;
   border: solid black 1px;
   color: red;
   padding: 5px;
+  position: absolute;
 }
-
+#form{
+  height: 500px;
+  overflow: auto;
+  background-color:var(--toast-background);
+  color:var(--toast-text);
+}
 
 @media screen and (min-width: 500px) and (max-width: 1350px) {
 #crossbtn{
@@ -80,8 +92,8 @@ p{
   border: solid 1px black;
   color: red;
   padding: 6px;
-  position: absolute;
-  margin-top: -21px;
+  // position: absolute;
+  margin-top: -15px;
 }
 
 .custom-table{
@@ -129,6 +141,8 @@ p{
 #form{
   height: 500px;
   overflow: auto;
+  background-color:var(--toast-background);
+  color:var(--toast-text);
 }
  
 }
