--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,6 +8,6 @@ html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 
-:root{--toast-background:#ffffff;
-    --toast-text:#333333;
-}
+// :root{--toast-background:#ffffff;
+//     --toast-text:#333333;
+// }
